Fix crash when video thumbnail cache contains empty files

Note: this fixes the resulting crash, but not the cause of the empty files.

BUG: 497831